Version 99.24 (Fix parent/child editor view white space relationship.)
modified:   classes/CBBackgroundView/CBBackgroundViewEditor.css
modified:   classes/CBView/CBViewEditor.css
-   Remove margins from the outer element of the view editor.

modified:   handlers/handle,admin,pages,edit.css
-   Add padding to the page's outermost CBModelArrayEditor to prevent container
    editors inside of it from coming into contact with the left and right
    edges of the page.

--- a/classes/CBBackgroundView/CBBackgroundViewEditor.css
+++ b/classes/CBBackgroundView/CBBackgroundViewEditor.css
@@ -4,7 +4,6 @@
     border-radius:  20px;
     border-style:   solid;
     border-width:   5px 10px 10px;
-    margin:         20px;
 }
 
 .CBViewEditorChrome.CBBackgroundViewEditorChrome > header
