--- a/classes/CBView/CBViewEditor.css
+++ b/classes/CBView/CBViewEditor.css
@@ -9,7 +9,6 @@
     border-radius:  20px;
     border-style:   solid;
     border-width:   5px 10px 10px;
-    margin:         20px;
 }
 
 .CBViewEditorChrome.CBViewEditorStandardChrome > header
